Pre-loaded all images, cursor pointer

--- a/index.html
+++ b/index.html
@@ -18,6 +18,12 @@
         <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
 
         <!-- Icons -->
+
+        <!-- Preload images -->
+        <link rel="preload" href="images/dog-bella.jpg" as="image">
+        <link rel="preload" href="images/dog-teddy.jpg" as="image">        
+        <link rel="preload" href="images/dog-rex.jpg" as="image">       
+        <link rel="preload" href="images/forev-alone.png" as="image">
     </head>
 
     <body>
